@@ -12,7 +12,7 @@
   <script nonce="{{ nonce }}">
     const WEB_PATH = '{{ path }}';
     const VERSION = '{{ version }}';
-    const AUTHMODE = '{{ authMode }}';
+    const LOGOUT_URL = '{{ logoutUrl }}';
     const DISABLE_USER_PASSWORD_UI = {{ disableUserPasswordUI }};
   </script>
   <body>
