@@ -12,7 +12,7 @@
   <script nonce="{{ nonce }}">
     const PATH = '{{ path }}';
     const VERSION = '{{ version }}';
-    const AUTHMODE = '{{ authMode }}';
+    const LOGOUT_URL = '{{ logoutUrl }}';
   </script>
   <body>
     <!--vue-ssr-outlet-->
