@@ -162,6 +162,8 @@ passwordSecret=testtest
 authMode=header
 userNameHeader=arkime_user
 userAutoCreateTmpl={"userId": "${this.arkime_user}", "userName": "${this.arkime_user_name}", "enabled": true, "webEnabled": true, "headerAuthEnabled": true, "emailSearch": true, "createEnabled": false, "removeEnabled": false, "packetSearch": true }
+uploadRoles=parliamentUser
+uploadCommand=/bin/true
 
 [all]
 viewPort=8125
