@@ -25,7 +25,7 @@
       const BUSINESS_DAYS = '{{ businessDays }}';
       const TURN_OFF_GRAPH_DAYS = {{ turnOffGraphDays }};
       const DISABLE_USER_PASSWORD_UI = {{ disableUserPasswordUI }};
-      const AUTHMODE = '{{ authMode }}';
+      const LOGOUT_URL = '{{ logoutUrl }}';
     </script>
   </head>
   <body class="{{ theme }}">
