@@ -9,7 +9,7 @@
   </head>
   <script nonce="{{ nonce }}">
     const VERSION = '{{ version }}';
-    const AUTHMODE = '{{ authMode }}';
+    const LOGOUT_URL = '{{ LOGOUT_URL }}';
   </script>
   <body>
     <!--vue-ssr-outlet-->
